--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -6,14 +6,18 @@
     </head>
     <body>
         <header></header>
-        <main>
-            <div class="row">
-                <div class="col-md-2"></div>
-                <div class="col-md">
-                    {% block content %}{% endblock %}
-                </div>
-                <div class="col-md-2"></div>
-            </div>
+        <main class="container-md">
+            {% with messages = get_flashed_messages(with_categories=true) %}
+            {% if messages %}
+                <ul class="ps-0">
+                    {% for category, message in messages %}
+                    <li class="alert alert-{{category}}" style="list-style-type: none;">{{ message }}</li>
+                    {% endfor %}
+                </ul>
+            {% endif %}
+            {% endwith %}
+
+            {% block content %}{% endblock %}
         </main>
         <footer></footer>
     </body>
