--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -5,7 +5,35 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     </head>
     <body>
-        <header></header>
+        <header>
+            <nav class="navbar navbar-dark bg-dark">
+                <a class="navbar-brand m-2" href="{{url_for('home.view_home')}}">Flask-ToDo</a>
+                    {% if current_user.is_authenticated %}    
+                    <ul class="navbar-nav flex-row">
+                        <li class="nav-item m-2">
+                            <a class="nav-link" href="#">Tasks</a>
+                        </li>
+                        <li class="nav-item m-2">
+                            <a class="nav-link" href="{{url_for('user.view_user', user_id=current_user.user_id)}}">User</a>
+                        </li>
+                    </ul>
+                    {% endif %}
+                    <ul class="navbar-nav flex-row">
+                        {% if current_user.is_authenticated %}
+                        <li class="nav-item m-2">
+                            <a class="nav-link" href="{{url_for('user.sign_out')}}">Sign-Out</a>
+                        </li>
+                        {% else %}
+                        <li class="nav-item m-2">
+                            <a class="nav-link" href="{{url_for('user.view_sign_in')}}">Sign-In</a>
+                        </li>
+                        <li class="nav-item m-2">
+                            <a class="nav-link" href="{{url_for('user.view_sign_up')}}">Sign-Up</a>
+                        </li>
+                        {% endif %}
+                    </ul>
+            </nav>
+        </header>
         <main class="container-md">
             {% with messages = get_flashed_messages(with_categories=true) %}
             {% if messages %}
