--- a/todo/user/templates/sign-up.html
+++ b/todo/user/templates/sign-up.html
@@ -1,61 +1,57 @@
-{% extends "base.html" %}
-
-{% block content %}
+{% extends "base.html" %} {% block content %}
 <div class="d-flex justify-content-center w-100">
-    <div class="d-flex flex-column align-items-center" style="max-width: 300px;">
-        <form action="" method="post" class="form" role="form"></form>
-            {{ form.csrf_token()}}
-            <fieldset class="form-group">
-                <legend class="border-bottom mb-4">Sign Up</legend>
-                <div class="form-group mt-2 mb-2">
-                    {{ form.email.label(class="form-control-label") }}
-                    {% if form.email.errors %}
-                        {{ form.email(class="form-control form-control-lg is-invalid") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.email.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.email(class="form-control form-control-lg") }}
-                    {% endif %}
-                </div>
-                <div class="form-group mt-2 mb-2">
-                    {{ form.password.label(class="form-control-label") }}
-                    {% if form.password.errors %}
-                        {{ form.password(class="form-control form-control-lg is-invalid", type="password") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.password(class="form-control form-control-lg", type="password") }}
-                    {% endif %}
-                </div>
-                <div class="form-group mt-2 mb-2">
-                    {{ form.confirm_password.label(class="form-control-label") }}
-                    {% if form.confirm_password.errors %}
-                        {{ form.confirm_password(class="form-control form-control-lg is-invalid", type="password") }}
-                        <div class="invalid-feedback">
-                            {% for error in form.confirm_password.errors %}
-                                <span>{{ error }}</span>
-                            {% endfor %}
-                        </div>
-                    {% else %}
-                        {{ form.confirm_password(class="form-control form-control-lg", type="password") }}
-                    {% endif %}
-                </div>
-                <div class="form-check mt-2 mb-2">
-                    {{ form.remember(class="form-check-input") }}
-                    {{ form.remember.label(class="form-check-label") }}
-                </div>
-            </fieldset>
-            <div class="form-group d-grid w-100">
-                {{ form.submit(class="btn btn-block btn-danger") }}
-            </div>
-        </form>
-    </div>
+  <div class="d-flex flex-column align-items-center" style="max-width: 300px">
+    <form action="" method="post" class="form" role="form">
+      {{ form.csrf_token()}}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-4">Sign Up</legend>
+        <div class="form-group mt-2 mb-2">
+          {{ form.email.label(class="form-control-label") }} {% if
+          form.email.errors %} {{ form.email(class="form-control form-control-lg
+          is-invalid") }}
+          <div class="invalid-feedback">
+            {% for error in form.email.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.email(class="form-control form-control-lg") }} {%
+          endif %}
+        </div>
+        <div class="form-group mt-2 mb-2">
+          {{ form.password.label(class="form-control-label") }} {% if
+          form.password.errors %} {{ form.password(class="form-control
+          form-control-lg is-invalid", type="password") }}
+          <div class="invalid-feedback">
+            {% for error in form.password.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.password(class="form-control form-control-lg",
+          type="password") }} {% endif %}
+        </div>
+        <div class="form-group mt-2 mb-2">
+          {{ form.confirm_password.label(class="form-control-label") }} {% if
+          form.confirm_password.errors %} {{
+          form.confirm_password(class="form-control form-control-lg is-invalid",
+          type="password") }}
+          <div class="invalid-feedback">
+            {% for error in form.confirm_password.errors %}
+            <span>{{ error }}</span>
+            {% endfor %}
+          </div>
+          {% else %} {{ form.confirm_password(class="form-control
+          form-control-lg", type="password") }} {% endif %}
+        </div>
+        <div class="form-check mt-2 mb-2">
+          {{ form.remember(class="form-check-input") }} {{
+          form.remember.label(class="form-check-label") }}
+        </div>
+      </fieldset>
+      <div class="form-group d-grid w-100">
+        {{ form.submit(class="btn btn-block btn-danger") }}
+      </div>
+    </form>
+  </div>
 </div>
 
 {% endblock %}
