--- a/todo/task/templates/task_list.html
+++ b/todo/task/templates/task_list.html
@@ -1,103 +1,101 @@
 {% extends "base.html" %} {% block content %}
 
 <div class="mt-4">
-  <!-- Modal -->
-  <div
-    class="modal fade"
-    id="newTaskModal"
-    tabindex="-1"
-    aria-labelledby="newTaskModalLabel"
-    aria-hidden="true"
-  >
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="newTaskModalLabel">New Task</h5>
-          <button
-            type="button"
-            class="btn-close"
-            data-bs-dismiss="modal"
-            aria-label="Close"
-          ></button>
-        </div>
-        <div class="modal-body">
-          <form action="" method="post" class="form" role="form">
-            {{ form.csrf_token()}}
-            <fieldset class="form-group">
-              <legend class="border-bottom mb-4">Sign In</legend>
-              <div class="form-group mt-2 mb-2">
-                {{ form.title.label(class="form-control-label") }} {% if
-                form.title.errors %} {{ form.title(class="form-control
-                form-control-lg is-invalid") }}
-                <div class="invalid-feedback">
-                  {% for error in form.title.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
+    <!-- Modal -->
+    <div class="modal fade" id="newTaskModal" tabindex="-1" aria-labelledby="newTaskModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="newTaskModalLabel">New Task</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                {% else %} {{ form.title(class="form-control form-control-lg")
-                }} {% endif %}
-              </div>
-              <div class="form-group mt-2 mb-2">
-                {{ form.description.label(class="form-control-label") }} {% if
-                form.description.errors %} {{
-                form.description(class="form-control form-control-lg
-                is-invalid", type="description") }}
-                <div class="invalid-feedback">
-                  {% for error in form.description.errors %}
-                  <span>{{ error }}</span>
-                  {% endfor %}
+                <div class="modal-body">
+                    <form action="" method="post" class="form" role="form">
+                        {{ form.csrf_token()}}
+                        <fieldset class="form-group">
+                            <legend class="border-bottom mb-4">Sign In</legend>
+                            <div class="form-group mt-2 mb-2">
+                                {{ form.title.label(class="form-control-label") }} {% if
+                                form.title.errors %} {{ form.title(class="form-control
+                                form-control-lg is-invalid") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.title.errors %}
+                                    <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                                {% else %} {{ form.title(class="form-control form-control-lg")
+                                }} {% endif %}
+                            </div>
+                            <div class="form-group mt-2 mb-2">
+                                {{ form.description.label(class="form-control-label") }} {% if
+                                form.description.errors %} {{
+                                form.description(class="form-control form-control-lg
+                                is-invalid", type="description") }}
+                                <div class="invalid-feedback">
+                                    {% for error in form.description.errors %}
+                                    <span>{{ error }}</span>
+                                    {% endfor %}
+                                </div>
+                                {% else %} {{ form.description(class="form-control
+                                form-control-lg", type="description") }} {% endif %}
+                            </div>
+                        </fieldset>
+                        <div class="form-group d-grid w-100">
+                            {{ form.submit(class="btn btn-block btn-danger") }}
+                        </div>
+                    </form>
                 </div>
-                {% else %} {{ form.description(class="form-control
-                form-control-lg", type="description") }} {% endif %}
-              </div>
-            </fieldset>
-            <div class="form-group d-grid w-100">
-              {{ form.submit(class="btn btn-block btn-danger") }}
             </div>
-          </form>
         </div>
-      </div>
     </div>
-  </div>
 
-  <div class="d-flex justify-content-between">
-    <h1>Tasks {{incomplete_tasks|length}}</h1>
-    <!-- Button trigger modal -->
-    <button
-      type="button"
-      class="btn btn-danger"
-      data-bs-toggle="modal"
-      data-bs-target="#newTaskModal"
-    >
-      New Task
-    </button>
-  </div>
-  <hr />
+    <div class="d-flex justify-content-between">
+        <h1>Tasks {{incomplete_tasks|length}}</h1>
+        <!-- Button trigger modal -->
+        <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#newTaskModal">
+            New Task
+        </button>
+    </div>
+    <hr />
 
-  {% if incomplete_tasks %} {% for task in incomplete_tasks %}
-  {{show_task(task)}} {% endfor %} {% else %}
-  <div class="d-flex justify-content-center">
-    <h3>Good job! You are done all of your tasks.</h3>
-  </div>
-  {% endif %}
+    {% if incomplete_tasks %} {% for task in incomplete_tasks %}
+    {{show_task(task)}} {% endfor %} {% else %}
+    <div class="d-flex justify-content-center">
+        <h3>Good job! You are done all of your tasks.</h3>
+    </div>
+    {% endif %}
 </div>
 
 {% endblock %} {% macro show_task(task) %}
 <div class="card w-100 mt-2 mb-2 pt-2 pb-2">
-  <div class="card-body">
-    <div class="d-flex justify-content-between">
-      <h3 class="card-title">{{task.title}}</h3>
-      <a
-        href="{{url_for('task.complete_task', task_id=task.task_id)}}"
-        class="card-link btn btn-block btn-danger"
-        >Done!</a
-      >
+    <div class="card-body">
+        <div class="d-flex justify-content-between">
+            <h3 class="card-title">{{task.title}}</h3>
+        </div>
+        <h6 class="card-subtitle mb-2 text-muted">
+            {% if task.due %} {{task.due.strftime("%Y-%m-%d")}} {% endif %}
+        </h6>
+        {% if task.description %}
+        <hr />
+        <p class="card-text">{{task.description}}</p>
+        {% endif %}
+
+        <div class="card-footer d-flex justify-content-end bg-transparent">
+            <a href="{{url_for('task.delete_task', task_id=task.task_id)}}" class="card-link btn"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                    <path fill-rule="evenodd"
+                        d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                </svg></a>
+            <a href="{{url_for('task.complete_task', task_id=task.task_id)}}" class="card-link btn"><svg
+                    xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-check-lg"
+                    viewBox="0 0 16 16">
+                    <path
+                        d="M12.736 3.97a.733.733 0 0 1 1.047 0c.286.289.29.756.01 1.05L7.88 12.01a.733.733 0 0 1-1.065.02L3.217 8.384a.757.757 0 0 1 0-1.06.733.733 0 0 1 1.047 0l3.052 3.093 5.4-6.425a.247.247 0 0 1 .02-.022Z" />
+                </svg></a>
+        </div>
     </div>
-    <h6 class="card-subtitle mb-2 text-muted">
-      {% if task.due %} {{task.due.strftime("%Y-%m-%d")}} {% endif %}
-    </h6>
-    <hr />
-    <p class="card-text">{{task.description}}</p>
-  </div>
 </div>
 {% endmacro %}
