--- a/todo/task/templates/task_list.html
+++ b/todo/task/templates/task_list.html
@@ -58,12 +58,12 @@
     </div>
     <hr />
 
-    {% if incomplete_tasks %} {% for task in incomplete_tasks %}
-    {{show_task(task)}} {% endfor %} {% else %}
+    {% for task in incomplete_tasks %}
+    {{show_task(task)}}
+    {% endfor %}
     <div class="d-flex justify-content-center">
         <h3>Good job! You are done all of your tasks.</h3>
     </div>
-    {% endif %}
 </div>
 
 {% endblock %} {% macro show_task(task) %}
