--- a/todo/home/templates/home.html
+++ b/todo/home/templates/home.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div>
-    <h1>Hello World</h1>
+    <h1>Flask-ToDo</h1>
+    <h6>Sign-In to get started.</h6>
 </div>
 {% endblock %}
